--- a/Option-Critic-NTMs-Overview-And-Pitch.ipynb
+++ b/Option-Critic-NTMs-Overview-And-Pitch.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Options\n",
     "\n",
-    "A framework for essentially having sub-policies in certain states (options). More formally introduced in [1,2 TODO].\n",
+    "A framework for essentially having sub-policies in certain states (options). More formally introduced in [1,2].\n",
     "\n",
     "Options can be represented as $\\omega \\in \\Omega$ (option). Where each option is a triple ($I_\\omega, \\pi_\\omega, \\beta_\\omega$). $I_\\omega$ is the set of states where the option can start. $\\pi_\\omega$ is the policy to follow in the option states. $\\beta_\\omega$ is the termination function (probability of terminating in each state [3]).\n",
     "\n",
@@ -60,7 +60,7 @@
     "\n",
     "**Intuitive interpretation** From [4], note that the advantage function is often used as a baseline to reduce variance in gradient estimates, but is derived naturally here. This can be interpreted as follows. \"When the option choice is suboptimal w.r.t the expected value over all options, the advantage function is negative and it drives the gradient corrections up, which increases the odds of terminating.\" And thus can pick a better option using $\\pi_\\Omega$. \n",
     "\n",
-    "**Relation to actor-critic** Here, formulate $\\beta_\\omega$ and $\\pi_\\omega$ as belonging to the actor, while the critic is $\\Q_U$ and $A_\\Omega$. \n",
+    "**Relation to actor-critic** Here, formulate $\\beta_\\omega$ and $\\pi_\\omega$ as belonging to the actor, while the critic is $Q_U$ and $A_\\Omega$. \n",
     "\n",
     "![option-critic](option-critic-algo.png \"Title\")\n"
    ]
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Code as deep things\n",
+    "### Code as deep things\n",
     "From https://github.com/jeanharb/option_critic/blob/master/neural_net.py want to walk through the code a bit to make it more clear how things are working in action."
    ]
   },
@@ -95,7 +95,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's take a deeper dive. Remember our critic is $Q_U$ and $A_\\Omega$, so let's look at the critic updates in the codebase... Explanations will be inline and relevant code will be extracted in parts. Only the core part of the update rules will be extrected. First the CRITIC:"
+    "Let's take a deeper dive. Remember our critic is $Q_U$ and $A_\\Omega$, so let's look at the critic updates in the codebase... Explanations will be inline and relevant code will be extracted in parts. Only the core part of the update rules will be extrected.\n",
+    "\n",
+    "#### Critic updates as code"
    ]
   },
   {
@@ -177,7 +179,7 @@
     "collapsed": true
    },
    "source": [
-    "Now the ACTOR"
+    "#### Actor updates as Code"
    ]
   },
   {
@@ -246,9 +248,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Outline for learning\n",
-    "\n",
-    "<pre>\n",
+    "#### Outline for learning (extracted code)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "new_option = self.model.predict_move(s)[0]\n",
     "current_option = np.random.randint(self.params.num_options) if np.random.rand() < epsilon else new_option\n",
     "\n",
@@ -289,8 +299,7 @@
     "    if self.frame_count % self.params.update_frequency == 0:\n",
     "        self.learn_critic()\n",
     "    if self.frame_count % self.params.freeze_interval == 0:\n",
-    "        self.model.update_target_params()\n",
-    "</pre>"
+    "        self.model.update_target_params()"
    ]
   },
   {
@@ -371,7 +380,7 @@
     "\n",
     "### Briefly on RL-NTMs\n",
     "\n",
-    "An alternative to NTMs are RL-NTMs [8]. These are neural turing machines based on reinforcement learning directly. The authors say that it is fairly unstable and complex. The idea is fairly simple, model controller a discrete way, but this makes it non-differentiable. Hence, you have to use REINFORCE on the objective. Some figures below make the idea more clearly, but we won't go into too much detail here on it.\n",
+    "An alternative to NTMs are RL-NTMs [8]. These are neural turing machines based on reinforcement learning directly. The authors say that it is fairly unstable and complex. The idea is fairly simple, model controller a discrete way, but this makes it non-differentiable. Hence, you have to use REINFORCE on the objective. Some figures below make the idea more clearly, but we won't go into too much detail here on it. All figures in the section below are from [8].\n",
     "\n",
     "![rl-ntm](rl-ntm-objective.png \"Title\")\n",
     "\n",
@@ -409,21 +418,34 @@
     "\n",
     "### Options from NTMs and DNCs\n",
     "\n",
-    "In the formulation for Differential Neural Computers, the authors proposed a way to use reinforcement learning in conjunction with the DNC (essentially a modified NTM).\n",
+    "In the formulation for Differential Neural Computers, the authors proposed a way to use reinforcement learning in conjunction with the DNC (essentially a modified NTM). We describe this above, note how similar these methods are to the option-critic method described earlier. If we now use a DNC to approximate the option policies instead of just the policy-network, then we reach quickly the same formulation. The figure from the option-critic paper describes how this is already done with a neural network [4].\n",
     "\n",
+    "![rl-ntm](option-critic-network.png \"Title\")\n",
+    "\n",
+    "This formulation is fairly simple and intuitive, as in the DNC paper [6] we can simply formulate the RL problem in the same manner, but using the option-critic framework instead of simple policy-gradient methods without options. \n",
     "\n",
     "### Options as addressing mechanisms\n",
     "\n",
-    "Let us take our option-critic architecture and consider it as the controller for our read-write heads. We can consider that the $I,\\beta$ functions will be our formulations for the read/write policy to a given memory space. That is, it will control where to write/read from given an input feature. Then we can take our $\\pi_\\omega$ values to be the read/write policy for that space and $\\pi_\\Omega$ to as the policy over options (that is which space to write to given $I,\\beta, \\pi_\\omega$).\n",
+    "Another clear correlation between options and neural turing machines that is perhaps more interesting to examine is the relation of options to addressing. Let us take our option-critic architecture and consider it as the controller for our read-write heads. We can consider that the $I,\\beta$ functions will be our formulations for the read/write policy to a given memory space. That is, it will control where to write/read from given an input feature. Then we can take our $\\pi_\\omega$ values to be the read/write policy for that space and $\\pi_\\Omega$ to as the policy over options (that is which space to write to given $I,\\beta, \\pi_\\omega$).\n",
     "\n",
-    "### Options for Both\n",
+    "Intuitively now, our policy over options becomes our addressing mechanism while our policies become our tuning functions within a given \"memory slot\" of how to store data in that slot. We can define actions as reading or writing some data to a memory slot. For simplicity, we can say for now that the action space can be the size of the memory (but this can likely be loosened with an approximation, such that an action maps to a learned soft-addressing).\n",
     "\n",
-    "Now, can we formulate options as both addressing and overall policy mechanisms?\n",
+    "The state space remains as the observed outputs. For example, in the context of a copy-task the state space may be the currently displayed values on the tape. We formulate this such that the reward is equivalent to matching the sequence of states desired or being close enough to the goal state (for example, amount of data copied, or in the context of a sorting task the amount of items in the correct order with a time penalty). \n",
+    "\n",
+    "We can then learn the policies in the exact same manner as option critic, but now we have a large number of actions. As such, the options here equare to our addressing scheme in NTMs, a given option relates to a given state space and will likely match to a set of given read/write action locations for that state space. In this context, we would expect more options to mean a more fine-grained addressing into the memory space as it would handle a smaller subset of states. \n",
+    "\n",
+    "TODO: go over, does the above make sense?\n",
+    "\n",
+    "#### An alternative formulation\n",
+    "\n",
+    "Another possible alternative formulation is setting our state space to be the memory space. In this formulation we can imagine that the options are more explicitely addressing into memory space, particularly with $I, \\beta$. The issue here is finding a way to generate a reward for a given action and state. If we say that a given action can be to read/write/or move +/- 1, this formulation starts to bear some resemblance to RL-NTMs (very roughly). \n",
+    "\n",
+    "TODO:\n",
     "\n",
     "\n",
     "### Going forward\n",
     "\n",
-    "I plan on implementing and experimenting with this in the coming months. If you're interested in collaborating, email me! [firstname].[lastname]@mail.mcgill.ca"
+    "I plan on implementing and experimenting with this in the coming months (though perhaps reformulating). If you're interested in collaborating or discussing, email me or let's talk! [firstname].[lastname]@mail.mcgill.ca"
    ]
   },
   {
@@ -434,21 +456,21 @@
     "\n",
     "TODO reference all pics\n",
     "\n",
-    "[1] Sutton, Precup, Singh 1999\n",
+    "[1] Sutton, Richard S., Doina Precup, and Satinder Singh. \"Between MDPs and semi-MDPs: A framework for temporal abstraction in reinforcement learning.\" Artificial intelligence 112.1-2 (1999): 181-211.\n",
     "\n",
-    "[2] precup 2000\n",
+    "[2] Stolle, Martin, and Doina Precup. \"Learning options in reinforcement learning.\" International Symposium on Abstraction, Reformulation, and Approximation. Springer Berlin Heidelberg, 2002.\n",
     "\n",
     "[3] http://www-anw.cs.umass.edu/~barto/courses/cs687/simsek-lecture2.pdf\n",
     "\n",
-    "[4] option-critic\n",
+    "[4] Bacon, Pierre-Luc, Jean Harb, and Doina Precup. \"The option-critic architecture.\" arXiv preprint arXiv:1609.05140 (2016).\n",
     "\n",
-    "[5] NTM paper\n",
+    "[5] Graves, Alex, Greg Wayne, and Ivo Danihelka. \"Neural turing machines.\" arXiv preprint arXiv:1410.5401 (2014).\n",
     "\n",
-    "[6] http://www.nature.com/nature/journal/v538/n7626/full/nature20101.html\n",
+    "[6] Graves, Alex, et al. \"Hybrid computing using a neural network with dynamic external memory.\" Nature 538.7626 (2016): 471-476.\n",
     "\n",
     "[7] Schaul, Tom, et al. \"Prioritized experience replay.\" arXiv preprint arXiv:1511.05952 (2015).\n",
     "\n",
-    "[8] RLNTM\n",
+    "[8] Zaremba, Wojciech, and Ilya Sutskever. \"Reinforcement learning neural Turing machines.\" arXiv preprint arXiv:1505.00521 362 (2015).\n",
     "\n",
     "[9] Parisotto, Emilio, and Ruslan Salakhutdinov. \"Neural Map: Structured Memory for Deep Reinforcement Learning.\" arXiv preprint arXiv:1702.08360 (2017).\n",
     "\n",
