--- a/Option-Critic-NTMs-Overview-And-Pitch.ipynb
+++ b/Option-Critic-NTMs-Overview-And-Pitch.ipynb
@@ -62,7 +62,19 @@
     "\n",
     "**Relation to actor-critic** Here, formulate $\\beta_\\omega$ and $\\pi_\\omega$ as belonging to the actor, while the critic is $Q_U$ and $A_\\Omega$. \n",
     "\n",
-    "![option-critic](option-critic-algo.png \"Title\")\n"
+    "#### A possible option-critic algorithm formulation example from [4]\n",
+    "\n",
+    "![option-critic](option-critic-algo.png \"Title\")\n",
+    "\n",
+    "Notice how the equations from above come into play here. We'll take a look at this in code form in a little bit.\n",
+    "\n",
+    "#### The general architecture\n",
+    "\n",
+    "But the general architecture can be seen in the figure below from [4]. Not we group our actors and critic as aforementioned. The difference is that we calculate the TD error to generate a gradient as in actor-critic and then apply it. We'll see this in the code a little later.\n",
+    "\n",
+    "![option-critic](option-critic-arch.png \"Title\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -405,7 +417,7 @@
     "\n",
     "### Similar Differentiable Memory Machines\n",
     "\n",
-    "There are several works which are based on the idea of augmenting networks with memory including [9-12]. \n"
+    "There are several works which are based on the idea of augmenting networks with memory including [9-13]. These include varitions on NTMs (Hierarchical, Continuous space, etc.) and variations on Memory Networks used for question answering. As well, there are expansions on adding structured memory to deep reinforcement learning.\n"
    ]
   },
   {
@@ -434,14 +446,9 @@
     "\n",
     "We can then learn the policies in the exact same manner as option critic, but now we have a large number of actions. As such, the options here equare to our addressing scheme in NTMs, a given option relates to a given state space and will likely match to a set of given read/write action locations for that state space. In this context, we would expect more options to mean a more fine-grained addressing into the memory space as it would handle a smaller subset of states. \n",
     "\n",
-    "TODO: go over, does the above make sense?\n",
-    "\n",
     "#### An alternative formulation\n",
     "\n",
-    "Another possible alternative formulation is setting our state space to be the memory space. In this formulation we can imagine that the options are more explicitely addressing into memory space, particularly with $I, \\beta$. The issue here is finding a way to generate a reward for a given action and state. If we say that a given action can be to read/write/or move +/- 1, this formulation starts to bear some resemblance to RL-NTMs (very roughly). \n",
-    "\n",
-    "TODO:\n",
-    "\n",
+    "Another possible alternative formulation is setting our state space to be the memory space. In this formulation we can imagine that the options are more explicitely addressing into memory space, particularly with $I, \\beta$. The issue here is finding a way to generate a reward for a given action and state. If we say that a given action can be to read/write/or move +/- 1, this formulation starts to bear some resemblance to RL-NTMs (very roughly). Then each option would directly translate to writing or reading from a subset of its states covered between $I, \\beta$. However, the trick becomes to formulate a reward for state, action pairs. Particularly, as the state here directly translated to memory address locations. This may mean that we have to add another variable to the formulation: an emission $e$. We can then say that a given state, action pair is not enough to describe the situation, but state action pair gives an emission which can then be used by the reward. That is reading from a memory slot may give an emission of whatever exists in that memory slot, while moving or writing will give no such emission. In this way we can compare emissions similarly how we compared states in the previous formulation.\n",
     "\n",
     "### Going forward\n",
     "\n",
@@ -453,8 +460,6 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "\n",
-    "TODO reference all pics\n",
     "\n",
     "[1] Sutton, Richard S., Doina Precup, and Satinder Singh. \"Between MDPs and semi-MDPs: A framework for temporal abstraction in reinforcement learning.\" Artificial intelligence 112.1-2 (1999): 181-211.\n",
     "\n",
@@ -476,9 +481,11 @@
     "\n",
     "[10] Chandar, Sarath, et al. \"Hierarchical Memory Networks.\" arXiv preprint arXiv:1605.07427 (2016).\n",
     "\n",
-    "[11] Anything, Ask Me. \"Dynamic Memory Networks for Natural Language Processing.\" Kumar et al. arXiv Pre-Print (2015).\n",
+    "[11] \"Dynamic Memory Networks for Natural Language Processing.\" Kumar et al. arXiv Pre-Print (2015).\n",
     "\n",
-    "[12] Gulcehre, Caglar, et al. \"Dynamic Neural Turing Machine with Soft and Hard Addressing Schemes.\" arXiv preprint arXiv:1607.00036 (2016).\n"
+    "[12] Gulcehre, Caglar, et al. \"Dynamic Neural Turing Machine with Soft and Hard Addressing Schemes.\" arXiv preprint arXiv:1607.00036 (2016).\n",
+    "\n",
+    "[13] Weston, Jason, Sumit Chopra, and Antoine Bordes. \"Memory networks.\" arXiv preprint arXiv:1410.3916 (2014).\n"
    ]
   },
   {
