Some more explanation

--- a/Option-Critic-NTMs-Overview-And-Pitch.ipynb
+++ b/Option-Critic-NTMs-Overview-And-Pitch.ipynb
@@ -322,11 +322,13 @@
    "source": [
     "## Neural Turing Machines\n",
     "\n",
-    "The foundational principle of neural machines is similar to working memory in humans. RNNs are shown to be Turing Complete, so can we make a differentiable turing machine from them [5].\n",
+    "The foundational principle of neural machines is similar to working memory in humans. RNNs are shown to be Turing Complete, so can we make a differentiable turing machine from them [5]. Using an LSTM as a controller, we can use fthe formulation in the figure below from [5]. This essentially allows us to create read and write heads which address into some memory space in a totally learned/differentiable manner.\n",
     "\n",
     "![rl-ntm](ntm-interface.png \"Title\")\n",
     "\n",
     "### Read operations\n",
+    "\n",
+    "We first take a look at how a parameterized differentiable read operation can be formed.\n",
     "\n",
     "$M_t$ is an $N \\times M$ matrix of memory at time $t$\n",
     "\n",
@@ -340,7 +342,7 @@
     "\n",
     "### Write operations\n",
     "\n",
-    "Involves an erase and an addition.\n",
+    "Now let's take a look at a write. In the original NTM formulation, this involves an erase and an addition.\n",
     "\n",
     "$$\\tilde{M}_t (i) \\leftarrow M_{t-1}(i) [ 1- w_t(i) e_t]$$\n",
     " \n",
@@ -349,6 +351,8 @@
     "That is we erase the weighted units given by an write head $w_t$ and an erase vector $e_t$ and then add and addition vector $a_t$. These vectors allow fine-grained control over which elements are erased and added over.\n",
     "\n",
     "### Addressing\n",
+    "\n",
+    "From [5], we can take a look at the addressing scheme as seen in the figure below. \n",
     "\n",
     "![rl-ntm](ntm-addressing.png \"Title\")\n",
     "\n",
@@ -370,7 +374,7 @@
     "\n",
     "$$w_t(i) \\leftarrow \\frac{\\tilde{w}_t (i)^{\\gamma_t}}{\\sum_j \\tilde{w}_t(j)^{\\gamma_t}}$$\n",
     "\n",
-    "This gives us our final weight vector which we use in our read/write operations above.\n",
+    "This gives us our final weight vector which we use in our read/write operations above. The combination of these machines optimized over the sequence loss create a totally differentiable system that can learn to manipulate memory.\n",
     "\n",
     "## Neural Turing Computers in the Context of RL\n",
     "\n",
